🐛 fix(dropdowns): Update inner spacing.

--- a/assets/scss/shared-ui/_dropdowns.scss
+++ b/assets/scss/shared-ui/_dropdowns.scss
@@ -14,14 +14,14 @@
 			right: -10px;
 			left: auto;
 			margin: 15px 0 0;
-			padding: 10px 0;
+			padding: 15px 0;
 			border: 1px solid palette(gray, lighter);
 			border-radius: $border-radius;
 			background-color: $white;
 			box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.07);
 			transition: 0.3s ease;
 			white-space: nowrap;
-			
+
 			&:before,
 			&:after {
 				content: " ";
@@ -61,7 +61,7 @@
 					&:hover,
 					&:active {
 						margin: 0;
-						padding: 0 8px;
+						padding: 0 15px;
 						border: 0;
 						outline: none;
 						box-shadow: none;
